fix: Add z-index to avoid svg click on mod_emundus_cas

--- a/modules/mod_emundus_cas/css/mod_emundus_cas.css
+++ b/modules/mod_emundus_cas/css/mod_emundus_cas.css
@@ -26,6 +26,7 @@
 
 .container-module-cas .sous-container-module-cas {
     width: 100%;
+    z-index: 1;
 }
 .container-module-cas  .sous-container-module-cas   ul {
     list-style: none;
